# SEMINAR-ITEM-REVISER

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/agent/: item_reviser.yaml  pipeline.yaml
configs/checker/: taxonomy.yaml
configs/data/: demo.yaml  eval_200.yaml
configs/evaluator/: default.yaml
configs/experiment/: benchmark_local_models.yaml  create_test_set.yaml  item_reviser_eval.yaml
configs/model/: hf_local.yaml  mock.yaml  openai_compatible.yaml  vllm.yaml
configs/prompt/: default.yaml
data/: README.md
data/eval/: test_set_200_seed.jsonl  test_set_200_seed.md
data/examples/: demo_items.jsonl
docs/: evaluation_plan.md  literature_checklist.md  lrz_usage.md  orchestration_diagram.md  progress_next_week.md  repository_design.md  seminar_protocol.md  source_notes.md
notebooks/: README.md
prompts/agents/: item_reviser.md  pipeline_controller.md  quality_checker.md
prompts/system/: item_reviser.md
reports/: progress_next_week_template.md
scripts/: benchmark_models.py  create_eval_set.py  evaluate.py  export_report.py  run_benchmark_suite.sh  run_item_reviser.py  smoke_test.py  validate_eval_set.py
seminar-material/: Protocol Meeting Abdul Samad.docx
slurm/: benchmark_suite_hf.sbatch  eval_cpu_mock.sbatch  eval_gpu_hf.sbatch  interactive_gpu.md
src/item_reviser/: __init__.py  __main__.py  constants.py  io.py  prompting.py  (+2 more)
tests/: test_llm_pipeline.py  test_metrics.py  test_models.py  test_prompting.py  test_rule_checks.py  test_schemas.py
(+16 files in other folders)
